pxc/tests/test_025_slice/const12.px

public namespace const12;
import core::common -;

function void test1()
{
  varray{int} f;
  f.resize(10, int());
  f[3] = 99;
  slice{int} s = f[0..5];
  cslice{int} mutable& cs = s; // error
  println(cs[3]);
}

test1();

